Validacion de no duplicados y acceso a modulos repetidos